# soul-coder

./: Cargo.toml  README.md  moon.yml
src/: lib.rs  presets.rs  truncate.rs
src/tools/: append.rs  bash.rs  edit.rs  find.rs  grep.rs  ls.rs  mod.rs  read.rs  write.rs
